--- a/shishamo/tsconfig.json
+++ b/shishamo/tsconfig.json
@@ -3,8 +3,12 @@
         "module": "node16",
         // "moduleResolution": "node16",
         "allowJs": true,
-        "checkJs": true
+        "checkJs": true,
         "allowImportingTsExtensions": true,
+        "baseUrl": "./",
+        "paths": {
+            "@db/*": ["db/*"]
+        }
         // "types": [
         //     "vitest/importMeta"
         // ]
