--- a/shishamo/package.json
+++ b/shishamo/package.json
@@ -6,6 +6,10 @@
   "main": "index.js",
   "scripts": {
     "start:local": "node ./cmd/start.js --stage local",
+
+    "inspect": "node --inspect ./cmd/start.js --stage local",
+    "watch": "nodemon ./cmd/start.js --stage local",
+
     "test:int": "SHISHAMO_STAGE=local vitest -t \"int ::\"",
     "test:unit": "SHISHAMO_STAGE=local vitest -t \"unit ::\""
   },
@@ -17,6 +21,7 @@
     "@types/node": "^20.4.7",
     "@types/pg": "^8.10.2",
     "kysely-codegen": "^0.10.1",
+    "nodemon": "^3.0.1",
     "typescript": "^5.1.6",
     "vitest": "^0.34.1"
   },
