--- a/shishamo/package.json
+++ b/shishamo/package.json
@@ -6,10 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start:local": "node ./cmd/start.js --stage local",
-
     "inspect": "node --inspect ./cmd/start.js --stage local",
     "watch": "nodemon ./cmd/start.js --stage local",
-
     "test:int": "SHISHAMO_STAGE=local vitest -t \"int ::\"",
     "test:unit": "SHISHAMO_STAGE=local vitest -t \"unit ::\""
   },
@@ -27,8 +25,10 @@
   },
   "dependencies": {
     "commander": "^11.0.0",
+    "deepmerge": "^4.3.1",
     "kysely": "^0.26.1",
     "pg": "^8.11.2",
-    "washambi-rpc": "file:../rpc/package/node/washambi-rpc-1.0.0.tgz"
+    "washambi-rpc": "file:../rpc/package/node/washambi-rpc-1.0.0.tgz",
+    "winston": "^3.10.0"
   }
 }
