--- a/fancypenosi/package.json
+++ b/fancypenosi/package.json
@@ -14,9 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.9.0",
+    "argon2": "^0.31.0",
     "express": "^4.18.2",
     "grpc-js-wrapper": "file:../rpc/package/grpc-js-wrapper/grpc-js-wrapper-1.0.0.tgz",
-    "washambi-db": "file:../db/package/node/washambi-db-1.0.0.tgz",
+    "joi": "^17.9.2",
     "washambi-rpc": "file:../rpc/package/node/washambi-rpc-1.0.0.tgz"
   },
   "devDependencies": {
