--- a/ggspp/package.json
+++ b/ggspp/package.json
@@ -14,10 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.0",
+    "argon2": "^0.31.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "htmx.org": "^1.9.4"
+    "grpc-js-wrapper": "file:../rpc/package/grpc-js-wrapper/grpc-js-wrapper-1.0.0.tgz",
+    "htmx.org": "^1.9.4",
+    "joi": "^17.9.2",
+    "washambi-rpc": "file:../rpc/package/node/washambi-rpc-1.0.0.tgz"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
