--- a/shishamo/package.json
+++ b/shishamo/package.json
@@ -7,6 +7,7 @@
     "start": "node ./cmd/start.js",
     "inspect": "node --inspect ./cmd/start.js",
     "watch": "nodemon ./cmd/start.js",
+    "gen": "kysely-codegen --url \"postgres://washambi_local:washambi@127.0.0.1/washambi_local\" --out-file \"./db/db.d.ts\"",
     "test:int": "SHISHAMO_STAGE=local vitest -t \"int ::\"",
     "test:unit": "SHISHAMO_STAGE=local vitest -t \"unit ::\""
   },
