--- a/shishamo/package.json
+++ b/shishamo/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.7",
     "@types/pg": "^8.10.2",
+    "@types/tldjs": "^2.3.1",
     "kysely-codegen": "^0.10.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.1",
     "kysely": "^0.26.1",
     "pg": "^8.11.2",
+    "tldjs": "^2.3.1",
     "washambi-rpc": "file:../rpc/package/node/washambi-rpc-1.0.0.tgz",
     "winston": "^3.10.0"
   }
