--- a/service/fancypenosi/package.json
+++ b/service/fancypenosi/package.json
@@ -16,9 +16,9 @@
     "@grpc/grpc-js": "^1.9.0",
     "argon2": "^0.31.0",
     "express": "^4.18.2",
-    "grpc-js-wrapper": "file:../rpc/package/grpc-js-wrapper/grpc-js-wrapper-1.0.0.tgz",
+    "grpc-js-wrapper": "file:../../rpc/package/grpc-js-wrapper/grpc-js-wrapper-1.0.0.tgz",
     "joi": "^17.9.2",
-    "washambi-rpc": "file:../rpc/package/node/washambi-rpc-1.0.0.tgz"
+    "washambi-rpc": "file:../../rpc/package/node/washambi-rpc-1.0.0.tgz"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
