--- a/service/fancypenosi/package.json
+++ b/service/fancypenosi/package.json
@@ -16,7 +16,7 @@
     "@grpc/grpc-js": "^1.9.0",
     "argon2": "^0.31.0",
     "express": "^4.18.2",
-    "grpc-js-wrapper": "file:../../rpc/package/grpc-js-wrapper/grpc-js-wrapper-1.0.0.tgz",
+    "node-grpc-wrapper": "file:../../rpc/package/node-grpc-wrapper/node-grpc-wrapper-1.0.0.tgz",
     "joi": "^17.9.2",
     "washambi-rpc": "file:../../rpc/package/node/washambi-rpc-1.0.0.tgz"
   },
