--- a/service/ggspp/package.json
+++ b/service/ggspp/package.json
@@ -19,7 +19,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "grpc-js-wrapper": "file:../../rpc/package/grpc-js-wrapper/grpc-js-wrapper-1.0.0.tgz",
+    "node-grpc-wrapper": "file:../../rpc/package/node-grpc-wrapper/node-grpc-wrapper-1.0.0.tgz",
     "htmx.org": "^1.9.4",
     "joi": "^17.9.2",
     "washambi-rpc": "file:../../rpc/package/node/washambi-rpc-1.0.0.tgz"
