--- a/service/fancypenosi/.air.toml
+++ b/service/fancypenosi/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./bin/serve"
   cmd = "go build -o ./bin/serve ./cmd/serve.go"
   delay = 5
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
