--- a/service/fancypenosi/tsconfig.json
+++ b/service/fancypenosi/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": true
-  }
+    "checkJs": true,
+    "allowImportingTsExtensions": true
+  },
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
