--- a/service/fancypenosi/tsconfig.json
+++ b/service/fancypenosi/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
+    "lib": ["ES2022", "DOM"],
     "allowImportingTsExtensions": true
   },
   "exclude": ["node_modules", "**/node_modules/*"]
