--- a/service/fancypenosi/package.json
+++ b/service/fancypenosi/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "tw": "tailwindcss -i ./tailwind.css -o ./web/static/style.css --watch",
+    "tw": "tailwindcss -i ./tailwind.css -o ./web/public/style/main.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
