--- a/service/blazerxd/Makefile
+++ b/service/blazerxd/Makefile
@@ -1,4 +1,8 @@
-export DB=./db
+.DEFAULT_GOAL = build
+export DB = ./db
+
+build:
+	go build -o ./bin/serve ./cmd/serve/main.go
 
 sql:
 	jet \
@@ -11,3 +15,21 @@ sql:
 	mv ${DB}/washambi_local/zoomers ${DB} \
 	&& \
 	rm -rf ${DB}/washambi_local
+
+watch:
+	air
+
+asdf:
+	go test -v ./...
+
+test-watch:
+	while inotifywait -r "./" --include ".*\.go" -e moved_from,close_write; do
+		echo "rerun in 3"
+		sleep 1
+		echo "rerun in 2"
+		sleep 1
+		echo "rerun in 1"
+		sleep 1
+		go test -v ./...
+	done
+
