--- a/service/wokejak/tsconfig.json
+++ b/service/wokejak/tsconfig.json
@@ -5,5 +5,6 @@
     "lib": ["ES2022", "DOM"],
     "allowImportingTsExtensions": true
   },
+  "include": ["web/public/script/**/*"],
   "exclude": ["node_modules", "**/node_modules/*"]
 }
