--- a/service/fancypenosi/.air.toml
+++ b/service/fancypenosi/.air.toml
@@ -4,9 +4,9 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./bin/serve"
-  cmd = "go build -o ./bin/serve ./cmd/serve.go"
-  delay = 5
+  bin = "./tmp/main"
+  cmd = "go build -o ./tmp/main ."
+  delay = 100
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
   exclude_file = []
   exclude_regex = ["_test.go"]
