--- a/lib/go/rpc/Makefile
+++ b/lib/go/rpc/Makefile
@@ -6,7 +6,6 @@ default:
 		--go_opt=paths=source_relative \
 		--go-grpc_out=./ \
 		--go-grpc_opt=paths=source_relative \
-		--proto_path=../../proto/ \
-		../../proto/shishamo/v1/*.proto \
-		../../proto/foo/v1/*.proto \
-		../../proto/blazerxd/v1/*.proto
+		--proto_path=../../../proto/ \
+		../../../proto/shishamo/v1/*.proto \
+		../../../proto/blazerxd/v1/*.proto
