--- a/lib/go/rpc/Makefile
+++ b/lib/go/rpc/Makefile
@@ -8,4 +8,5 @@ default:
 		--go-grpc_opt=paths=source_relative \
 		--proto_path=../../../proto/ \
 		../../../proto/shishamo/v1/*.proto \
-		../../../proto/blazerxd/v1/*.proto
+		../../../proto/blazerxd/v1/*.proto \
+		../../../proto/laboof/v1/*.proto
